--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jayakrishnan C P || Cybersecurity Leader</title>
+  <title>Jayakrishnan C Prakash || Cybersecurity Leader</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/alpinejs" defer></script>
@@ -495,9 +495,7 @@
           Cybersecurity Leader | Expert in Zero Trust, MDR, XDR, AI-Driven Threat Detection & Incident Response | Building Resilient Security Strategies for the Future
         </h1>
         <p class="text-lg mt-4 text-left text-gray-200">
-          Cybersecurity isn’t just about defense—it’s about strategy, innovation, and resilience. With over 20 years of experience, I have built and led high-performing security operations teams, transforming cybersecurity programs for global enterprises. My expertise spans Zero Trust Architecture, Managed Detection and Response (MDR), XDR, Cloud Security, and AI-driven threat intelligence—all aimed at fortifying organizations against evolving cyber threats.
-          As Senior Director of Security Operations at UltraViolet Cyber, I specialize in proactive threat detection, AI-powered security automation, and large-scale incident response. Throughout my career, I’ve spearheaded the deployment of AI-driven anomaly detection, phishing defense, and SOAR solutions, ensuring seamless security operations in hybrid and cloud environments. Prior to this, my leadership roles at METMOX, Verizon Business, and Geojit Financial Services honed my ability to design and execute scalable security programs that align with business goals while enhancing operational efficiency and resilience.
-          My passion lies in leveraging AI, automation, and data-driven threat intelligence to stay ahead of adversaries. Looking ahead, I am committed to driving security innovation, mentoring cybersecurity professionals, and collaborating with industry leaders to build future-ready security strategies. Let’s connect and work towards a more secure digital future.
+          Cybersecurity leader with 20+ years of experience driving global security operations and building resilient, business-aligned programs. Specializes in Zero Trust, MDR, XDR, and AI-driven threat detection with deep expertise in incident response and security automation. Focused on innovation, team leadership, and shaping future-ready strategies through data-driven intelligence and proactive defense.
         </p>
         <p class="text-lg mt-4 text-left">
           Email: <a href="mailto:jaykrishnancp@gmail.com" class="text-red-500 hover:underline">jaykrishnancp@gmail.com</a>
