--- a/index.html
+++ b/index.html
@@ -459,7 +459,6 @@
         <a href="#projects">Projects</a>
         <a href="#education">Education</a>
         <a href="#licenses-certifications">Certifications</a>
-        <a href="#contact">Contact</a>
         
         <!-- Profile Image with Dropdown -->
         <div class="relative ml-8" x-data="{ dropdownOpen: false }" @click.away="dropdownOpen = false">
@@ -498,7 +497,7 @@
           Cybersecurity leader with 20+ years of experience driving global security operations and building resilient, business-aligned programs. Specializes in Zero Trust, MDR, XDR, and AI-driven threat detection with deep expertise in incident response and security automation. Focused on innovation, team leadership, and shaping future-ready strategies through data-driven intelligence and proactive defense.
         </p>
         <p class="text-lg mt-4 text-left">
-          Email: <a href="mailto:jaykrishnancp@gmail.com" class="text-red-500 hover:underline">jaykrishnancp@gmail.com</a>
+          Email: <a href="mailto:jay@jayakrishnancp.com" class="text-red-500 hover:underline">jay@jayakrishnancp.com</a>
         </p>
         <p class="text-lg text-left">
           LinkedIn: <a href="https://linkedin.com/in/jaykrishnancp" class="text-red-500 hover:underline">linkedin.com/in/jaykrishnancp</a>
@@ -512,7 +511,14 @@
       <div id="summary" class="space-y-4 pt-10">
         <h2 class="section-header">Summary</h2>
         <div class="card p-5 h-auto min-h-[150px] flex items-center justify-center">
-          <p class="text-center">Accomplished cybersecurity leader with over 18 years of experience driving enterprise-grade security solutions. Spearheaded Zero Trust architectures (ZIA, ZPA) and AI-powered threat detection systems, achieving 100% SLA compliance and reducing incident response times by 40%. Passionate about aligning security strategies with business objectives, Jay has built and led high-performing MDR and SOC teams, implementing SIEM, XDR, and SOAR platforms to enhance operational resilience. His expertise in automation and cloud-native security has delivered scalable programs, saving organizations millions through optimized threat detection and response.</p>
+          <p class="text-center">
+Cybersecurity isn’t just about defense—it’s about strategy, innovation, and resilience. With over 20 years of experience, I have built and led high-performing security operations teams, transforming cybersecurity programs for global enterprises. My expertise spans Zero Trust Architecture, Managed Detection and Response (MDR), XDR, Cloud Security, and AI-driven threat intelligence—all aimed at fortifying organizations against evolving cyber threats.
+
+As Senior Director of Security Operations at UltraViolet Cyber, I specialize in proactive threat detection, AI-powered security automation, and large-scale incident response. Throughout my career, I’ve spearheaded the deployment of AI-driven anomaly detection, phishing defense, and SOAR solutions, ensuring seamless security operations in hybrid and cloud environments. Prior to this, my leadership roles at METMOX, Verizon Business, and Geojit Financial Services honed my ability to design and execute scalable security programs that align with business goals while enhancing operational efficiency and resilience.
+
+My passion lies in leveraging AI, automation, and data-driven threat intelligence to stay ahead of adversaries. Looking ahead, I am committed to driving security innovation, mentoring cybersecurity professionals, and collaborating with industry leaders to build future-ready security strategies. Let’s connect and work towards a more secure digital future.
+            
+          </p>
         </div>
       </div>
 
