--- a/index.html
+++ b/index.html
@@ -511,14 +511,18 @@
       <div id="summary" class="space-y-4 pt-10">
         <h2 class="section-header">Summary</h2>
         <div class="card p-5 h-auto min-h-[150px] flex items-center justify-center">
-          <p class="text-center">
-Cybersecurity isn’t just about defense—it’s about strategy, innovation, and resilience. With over 20 years of experience, I have built and led high-performing security operations teams, transforming cybersecurity programs for global enterprises. My expertise spans Zero Trust Architecture, Managed Detection and Response (MDR), XDR, Cloud Security, and AI-driven threat intelligence—all aimed at fortifying organizations against evolving cyber threats.
-
-As Senior Director of Security Operations at UltraViolet Cyber, I specialize in proactive threat detection, AI-powered security automation, and large-scale incident response. Throughout my career, I’ve spearheaded the deployment of AI-driven anomaly detection, phishing defense, and SOAR solutions, ensuring seamless security operations in hybrid and cloud environments. Prior to this, my leadership roles at METMOX, Verizon Business, and Geojit Financial Services honed my ability to design and execute scalable security programs that align with business goals while enhancing operational efficiency and resilience.
-
-My passion lies in leveraging AI, automation, and data-driven threat intelligence to stay ahead of adversaries. Looking ahead, I am committed to driving security innovation, mentoring cybersecurity professionals, and collaborating with industry leaders to build future-ready security strategies. Let’s connect and work towards a more secure digital future.
-            
+          <p class="text-left space-y-4 leading-relaxed">
+      Cybersecurity isn’t just about defense—it’s about strategy, innovation, and resilience. With over 20 years of experience, I have built and led high-performing security operations teams, transforming cybersecurity programs for global enterprises. My expertise spans Zero Trust Architecture, Managed Detection and Response (MDR), XDR, Cloud Security, and AI-driven threat intelligence—all aimed at fortifying organizations against evolving cyber threats.
           </p>
+
+          <p class="text-left space-y-4 leading-relaxed mt-4">
+      As Senior Director of Security Operations at UltraViolet Cyber, I specialize in proactive threat detection, AI-powered security automation, and large-scale incident response. Throughout my career, I’ve spearheaded the deployment of AI-driven anomaly detection, phishing defense, and SOAR solutions, ensuring seamless security operations in hybrid and cloud environments. Prior to this, my leadership roles at METMOX, Verizon Business, and Geojit Financial Services honed my ability to design and execute scalable security programs that align with business goals while enhancing operational efficiency and resilience.
+          </p>
+
+        <p class="text-left space-y-4 leading-relaxed mt-4">
+      My passion lies in leveraging AI, automation, and data-driven threat intelligence to stay ahead of adversaries. Looking ahead, I am committed to driving security innovation, mentoring cybersecurity professionals, and collaborating with industry leaders to build future-ready security strategies. Let’s connect and work towards a more secure digital future.
+        </p>
+
         </div>
       </div>
 
