--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
   }">
     <!-- Header with Name and Navigation -->
     <div class="header">
-      <div class="name">Jayakrishnan CP</div>
+      <div class="name">Jayakrishnan C Prakash</div>
       <nav class="flex items-center">
         <a href="#summary">Summary</a>
         <a href="#experience">Experience</a>
