--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
         <!-- Profile Image with Dropdown -->
         <div class="relative ml-8" x-data="{ dropdownOpen: false }" @click.away="dropdownOpen = false">
           <img 
-            src="https://placehold.co/40x40/E50914/ffffff?text=JP" 
+            src="images/profile.jpg" 
             alt="Profile" 
             class="w-10 h-10 rounded-full border-2 border-white cursor-pointer"
             @click="dropdownOpen = !dropdownOpen"
@@ -514,9 +514,9 @@
             x-transition:leave-end="opacity-0 scale-95"
             class="absolute right-0 mt-2 w-48 bg-gray-800 rounded-md shadow-lg py-1 z-20"
           >
-            <a href="https://github.com/your-github" target="_blank" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">GitHub</a>
-            <a href="https://your-blog.com" target="_blank" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Blog</a>
-            <a href="https://n8n.io/" target="_blank" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">n8n Projects</a>
+            <a href="https://github.com/jkrishnancp" target="_blank" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">GitHub</a>
+            <a href="https://jayakrishnancp.tech" target="_blank" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Blog</a>
+            <a href="https://n8n.jayakrishnancp.com/" target="_blank" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">n8n Projects</a>
             <!-- Add more links as needed -->
           </div>
         </div>
@@ -580,7 +580,7 @@
               <div class="card-title">Team Lead - Incident Management</div>
             </div>
             <div class="card" @click="isOpen = true; selectedItem = 'seniorAnalyst'">
-              <img src="https://placehold.co/200x300/1f1f1f/E50914?text=Senior+Analyst" alt="Senior Analyst" />
+              <img src="images/No_Image_Available.jpg" alt="Senior Analyst" />
               <div class="card-number">4</div>
               <div class="card-title">Senior Security Analyst</div>
             </div>
