--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       margin: 0;
       padding: 0;
       overflow-x: hidden;
+       -webkit-user-select: none; /* Safari */
+      -moz-user-select: none;    /* Firefox */
+      -ms-user-select: none;     /* IE 10+ */
+      user-select: none;         /* Standard syntax */
     }
     /* Header styling for the top navigation bar */
     .header {
