--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     /* Hero section styling */
     .hero {
       /* Background image for San Francisco */
-      background-image: url('imagessan-francisco-city-skyline-united-states-night-time-3440x1440-5005.jpg'); /* Placeholder for San Francisco image */
+      background-image: url('images/bay-bridge-san-francisco-california-wallpaper-preview.jpg'); /* Placeholder for San Francisco image */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -542,7 +542,8 @@
   }">
     <!-- Header with Name and Navigation -->
     <div class="header">
-      <div class="name">Jayakrishnan C Prakash</div>
+      <!-- Made the name clickable to go to the summary section -->
+      <a href="#summary" class="name">Jayakrishnan C Prakash</a>
 
       <!-- Hamburger Icon for Mobile -->
       <button
